--- a/src/index.html
+++ b/src/index.html
@@ -230,19 +230,39 @@
 		};
 		setTimeout(function(){
 			require(["Contents/Settings"], function() {
-				bootstraploader(Settings.FRAMEWORKS,0, function(){
-					setInterval(function() {
-						$.ajax({
-							url: "/session"
-						}).done(function( data ) {
-							$('.omneedia-overlay').hide();
-							if (__SESSION__==-1) __SESSION__=data.session;
-							if (__SESSION__!=data.session) location.reload();
-						}).fail(function() {
-							$('.omneedia-overlay').show();
+				require.config({
+					paths: {
+						"io": Settings.LIVERELOAD+'/socket.io/socket.io.js'
+					}
+				});					
+				require(['io'],function(io) {
+					var socket = io.connect(Settings.LIVERELOAD);
+					socket.on('connect', function () {
+						try {
+							App.unblur();
+						} catch(e) {};						
+						$('.omneedia-overlay').hide();
+					});
+					socket.on('disconnect', function () {
+						try {
 							App.blur();
-						});
-					},1000);				
+						} catch(e) {};
+					});
+					socket.on('session', function (data) {
+						var data=JSON.parse(data);
+						if (!localStorage.getItem("session")) localStorage.setItem('session',data.session); else {
+							if (localStorage.getItem("session")!=data.session) {
+								localStorage.setItem('session',data.session);
+								try {										
+									App.blur();
+								}catch(e) {
+								};
+								location.reload();
+							}
+						};
+					});																				
+				});			
+				bootstraploader(Settings.FRAMEWORKS,0, function(){
 					require(["Contents/Application/app"], function() {					
 						
 					});
